# optscale_arcee

./: .gitignore  LICENSE  README.md  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint-test.yaml  publish.yaml
examples/: datasets.py  linear_regression.py  nnt_model.py  requirements.txt  s3_instrument.py  simple.py  torchvision.pth  torchvision_demo.py
optscale_arcee/: __init__.py  arcee.py  name_generator.py  platform.py  utils.py
optscale_arcee/collectors/: command_line.py  console.py  git.py  hardware.py
optscale_arcee/hw_stat_collector/: collector.py
optscale_arcee/instrumentation/: __init__.py  boto3_stats.md  collector.py  patch.py  stats.py  utils.py
optscale_arcee/instrumentation/boto3/: __init__.py  stats.py  utils.py  wrapper.py
optscale_arcee/instrumentation/boto3/ec2/: __init__.py
optscale_arcee/instrumentation/boto3/s3/: __init__.py
optscale_arcee/instrumentation/redshift_connector/: __init__.py  stats.py  wrapper.py
optscale_arcee/libs/: __init__.py
optscale_arcee/libs/GPUtil/: GPUtil.py  __init__.py  demo_GPUtil.py
optscale_arcee/module_collector/: collector.py
optscale_arcee/modules/: dataset.py
optscale_arcee/modules/providers/: __init__.py  amazon.py  local_file.py
optscale_arcee/platforms_meta/: azure.py
optscale_arcee/sender/: sender.py
tests/: test_data.py  test_platform.py
