# setup.cfg
[metadata]
name = optscale_arcee
version = 0.1.48
author = Hystax
description = ML profiling tool for OptScale
long_description = file: README.md
long_description_content_type = text/markdown
license = "Apache License 2.0"
url = https://my.optscale.com/
project_urls=
    Source = https://github.com/hystax/optscale_arcee
keywords = arcee, ml, optscale, finops, mlops
[options]
python_requires = >=3.8, <4
install_requires =
    aiohttp==3.10.11
    aiofiles==23.2.1
    psutil==7.0.0
    aioboto3==14.1.0
packages = find:
package_dir =
    =.
test =
    tox
[options.packages.find]
where = .
exclude =
    tests
