# setup.cfg
[metadata]
name = optscale_arcee
version = 0.1.50
author = Hystax
description = ML profiling tool for OptScale
long_description = file: README.md
long_description_content_type = text/markdown
license = "Apache License 2.0"
url = https://my.optscale.com/
project_urls=
    Source = https://github.com/hystax/optscale_arcee
keywords = arcee, ml, optscale, finops, mlops
[options]
python_requires = >=3.8, <4
install_requires =
    aiohttp==3.10.11
    aiofiles==22.1.0
    psutil==5.9.2
packages = find:
package_dir =
    =.
test =
    tox
[options.packages.find]
where = .
exclude =
    tests
